# carriage_chat

./: CMakeLists.txt  SocketsApp.sln
ClientApp/: ClientApp.cpp  ClientApp.h
HostApp/: HostApp.cpp
src/ClientApp/: ClientApp.cpp  ClientApp.h
src/HostApp/: HostApp.cpp  HostApp.h
src/Shared/: DateTime.h  Message.h  User.h
